k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helpdesk
  labels:
    app: helpdesk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helpdesk
  template:
    metadata:
      labels:
        app: helpdesk
    spec:
      containers:
        - name: helpdesk
          image: ghcr.io/gofreego/helpdesk:pilot-5b589fc
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
            - name: grpc
              containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
